Update to parametrize path variables

--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "aws-sdk": "^2.118.0",
     "axios": "^0.16.2",
     "bip39": "^2.4.0",
+    "copy-dir": "^0.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "ethereumjs-wallet": "^0.6.0",
     "ethjs": "^0.2.8",
     "s3": "^4.4.0",
+    "solc": "^0.4.17",
     "stylus-font-awesome": "0.0.1",
     "throw-max-listeners-error": "^1.0.1",
+    "truffle": "^3.4.11",
     "truffle-contract": "^3.0.0",
     "truffle-expect": "0.0.3",
     "vue": "^2.4.4",
